<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="top"
        android:baselineAligned="false">

    <RelativeLayout android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/time_title_text"
                android:text="@string/str_record_time_title"
                android:gravity="center_horizontal"
                android:layout_alignParentTop="true"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_time"
                android:text="@string/str_record_time"
                android:gravity="center_horizontal"
                android:layout_below="@+id/time_title_text"/>
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        <TextView
                android:id="@+id/speed_title_text"
                android:text="@string/str_record_speed_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_alignParentTop="true"/>
        <TextView
                android:id="@+id/text_speed"
                android:text="@string/str_record_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_below="@+id/speed_title_text"/>
    </RelativeLayout>
</LinearLayout>
