<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">

    <TextView
            android:text="@string/str_history_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/history_title_text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/history_time_text"
            android:text="@string/str_history_time"
            android:layout_toRightOf="@+id/history_title_text"
            android:layout_toEndOf="@+id/history_title_text"/>

    <TextView
            android:text="@string/str_history_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/history_distance_text"
            android:layout_toRightOf="@+id/history_title_text"
            android:layout_toEndOf="@+id/history_title_text"
            android:layout_below="@+id/history_time_text"/>
</RelativeLayout>